2005-04-13  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclExecute.c: Commented out the code to store pointers
	to literals in INST_PUSH: it breaks TclPrintInstruction.

2005-04-12  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL (AppendLocals):
	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclProc.c:
	* generic/tclTrace.c:
	* generic/tclVar.c: part 4 of variable reform. Compiled local vars
	are half-length with respect to normal vars (missing refCount,
	tracePtr and searchPtr). When a trace or search is done for the
	first time on a compiled local, a new extension Var structure is
	created and the local is linked to it. New flags VAR_SHORT
	and VAR_EXTENDED are defined to indicate these special variable
	structs. 

2005-04-12  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclProc.c:
	* generic/tclVar.c: fixing setting of the new flags

2005-04-11  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclTrace.c:
	* generic/tclVar.c: part 3 of variable reform. New flags
	VAR_DIRECT_READABLE and VAR_DIRECT_WRITABLE for faster checks in
	TEBC. Added code to maintain the flags when handling the variable
	and its traces.
	
2005-04-10  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclProc.c:
	* generic/tclVar.c: part 2 of variable reform. Removed the flags
	VAR_SCALAR and VAR_UNDEFINED.


	* generic/tclExecute.c: missing semicolons under TCL_COMPILE_DEBUG
	* generic/tclInt.h: missing macros TclAllocObjsStorage and
	TclFreeObjStorage, not needed under MEM_DEBUG for Tcl_Objs but
	required for the new Var allocation model.	
	Thanks dgp!
	
	*** FROM HEAD ***
	* generic/tclBasic.c (TclObjInvoke):	Plug memory leak. [Bug 1180368]

	* generic/tcl.h (comments):
	* generic/tclCmdIL.c:
	* generic/tclCompile.c: